NLP TP/texts/robotics/robotics.stackexchange_0000070307.txt
Q:

Error in CameraNode and StereoNode

Hi
I'm using ROS Indigo on Fedora 22.
I paste the ueye folder on my catkin workspace (/home/doliveira/catkin_ws/src/), but when I run catkin_make on catkin_ws I get the follow error on files CameraNode.cpp and StereoNode.cpp.
/home/doliveira/catkin_ws/src/ueye/src/CameraNode.cpp: In member function ‘sensor_msgs::ImagePtr ueye::CameraNode::processFrame(IplImage*, sensor_msgs::CameraInfoPtr&)’:
/home/doliveira/catkin_ws/src/ueye/src/CameraNode.cpp:368:20: error: no match for ‘operator=’ (operand types are ‘cv::Mat’ and ‘IplImage* {aka _IplImage*}’)
   converter_.image = frame;
                    ^
In file included from /usr/local/include/opencv2/core/mat.hpp:3396:0,
                 from /usr/local/include/opencv2/core.hpp:59,
                 from /usr/local/include/opencv2/core/core.hpp:48,
                 from /home/doliveira/catkin_ws/src/vision_opencv-indigo/cv_bridge/include/cv_bridge/cv_bridge.h:42,
                 from /home/doliveira/catkin_ws/src/ueye/include/ueye/CameraNode.h:44,
                 from /home/doliveira/catkin_ws/src/ueye/src/CameraNode.cpp:35:
/usr/local/include/opencv2/core/mat.inl.hpp:560:6: note: candidate: cv::Mat& cv::Mat::operator=(const cv::Mat&)
 Mat& Mat::operator = (const Mat& m)
      ^
/usr/local/include/opencv2/core/mat.inl.hpp:560:6: note:   no known conversion for argument 1 from ‘IplImage* {aka _IplImage*}’ to ‘const cv::Mat&’
In file included from /usr/local/include/opencv2/core/mat.hpp:3396:0,
                 from /usr/local/include/opencv2/core.hpp:59,
                 from /usr/local/include/opencv2/core/core.hpp:48,
                 from /home/doliveira/catkin_ws/src/vision_opencv-indigo/cv_bridge/include/cv_bridge/cv_bridge.h:42,
                 from /home/doliveira/catkin_ws/src/ueye/include/ueye/CameraNode.h:44,
                 from /home/doliveira/catkin_ws/src/ueye/src/CameraNode.cpp:35:
/usr/local/include/opencv2/core/mat.inl.hpp:2878:6: note: candidate: cv::Mat& cv::Mat::operator=(const cv::MatExpr&)
 Mat& Mat::operator = (const MatExpr& e)
      ^
/usr/local/include/opencv2/core/mat.inl.hpp:2878:6: note:   no known conversion for argument 1 from ‘IplImage* {aka _IplImage*}’ to ‘const cv::MatExpr&’
In file included from /usr/local/include/opencv2/core.hpp:59:0,
                 from /usr/local/include/opencv2/core/core.hpp:48,
                 from /home/doliveira/catkin_ws/src/vision_opencv-indigo/cv_bridge/include/cv_bridge/cv_bridge.h:42,
                 from /home/doliveira/catkin_ws/src/ueye/include/ueye/CameraNode.h:44,
                 from /home/doliveira/catkin_ws/src/ueye/src/CameraNode.cpp:35:
/usr/local/include/opencv2/core/mat.hpp:1102:10: note: candidate: cv::Mat& cv::Mat::operator=(const Scalar&)
     Mat& operator = (const Scalar& s);
          ^
/usr/local/include/opencv2/core/mat.hpp:1102:10: note:   no known conversion for argument 1 from ‘IplImage* {aka _IplImage*}’ to ‘const Scalar& {aka const cv::Scalar_<double>&}’
ueye/CMakeFiles/ueye_nodelets.dir/build.make:110: recipe for target 'ueye/CMakeFiles/ueye_nodelets.dir/src/CameraNode.cpp.o' failed
make[2]: *** [ueye/CMakeFiles/ueye_nodelets.dir/src/CameraNode.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
[ 82%] Built target beginner_tutorials_generate_messages
/home/doliveira/catkin_ws/src/ueye/src/StereoNode.cpp: In member function ‘sensor_msgs::ImagePtr ueye::StereoNode::processFrame(IplImage*, ueye::Camera&, cv_bridge::CvImage&, sensor_msgs::CameraInfoPtr&, sensor_msgs::CameraInfo&)’:
/home/doliveira/catkin_ws/src/ueye/src/StereoNode.cpp:465:19: error: no match for ‘operator=’ (operand types are ‘cv::Mat’ and ‘IplImage* {aka _IplImage*}’)
   converter.image = frame;
                   ^
In file included from /usr/local/include/opencv2/core/mat.hpp:3396:0,
                 from /usr/local/include/opencv2/core.hpp:59,
                 from /usr/local/include/opencv2/core/core.hpp:48,
                 from /home/doliveira/catkin_ws/src/vision_opencv-indigo/cv_bridge/include/cv_bridge/cv_bridge.h:42,
                 from /home/doliveira/catkin_ws/src/ueye/include/ueye/CameraNode.h:44,
                 from /home/doliveira/catkin_ws/src/ueye/include/ueye/StereoNode.h:38,
                 from /home/doliveira/catkin_ws/src/ueye/src/StereoNode.cpp:35:
/usr/local/include/opencv2/core/mat.inl.hpp:560:6: note: candidate: cv::Mat& cv::Mat::operator=(const cv::Mat&)
 Mat& Mat::operator = (const Mat& m)
      ^
/usr/local/include/opencv2/core/mat.inl.hpp:560:6: note:   no known conversion for argument 1 from ‘IplImage* {aka _IplImage*}’ to ‘const cv::Mat&’
In file included from /usr/local/include/opencv2/core/mat.hpp:3396:0,
                 from /usr/local/include/opencv2/core.hpp:59,
                 from /usr/local/include/opencv2/core/core.hpp:48,
                 from /home/doliveira/catkin_ws/src/vision_opencv-indigo/cv_bridge/include/cv_bridge/cv_bridge.h:42,
                 from /home/doliveira/catkin_ws/src/ueye/include/ueye/CameraNode.h:44,
                 from /home/doliveira/catkin_ws/src/ueye/include/ueye/StereoNode.h:38,
                 from /home/doliveira/catkin_ws/src/ueye/src/StereoNode.cpp:35:
/usr/local/include/opencv2/core/mat.inl.hpp:2878:6: note: candidate: cv::Mat& cv::Mat::operator=(const cv::MatExpr&)
 Mat& Mat::operator = (const MatExpr& e)
      ^
/usr/local/include/opencv2/core/mat.inl.hpp:2878:6: note:   no known conversion for argument 1 from ‘IplImage* {aka _IplImage*}’ to ‘const cv::MatExpr&’
In file included from /usr/local/include/opencv2/core.hpp:59:0,
                 from /usr/local/include/opencv2/core/core.hpp:48,
                 from /home/doliveira/catkin_ws/src/vision_opencv-indigo/cv_bridge/include/cv_bridge/cv_bridge.h:42,
                 from /home/doliveira/catkin_ws/src/ueye/include/ueye/CameraNode.h:44,
                 from /home/doliveira/catkin_ws/src/ueye/include/ueye/StereoNode.h:38,
                 from /home/doliveira/catkin_ws/src/ueye/src/StereoNode.cpp:35:
/usr/local/include/opencv2/core/mat.hpp:1102:10: note: candidate: cv::Mat& cv::Mat::operator=(const Scalar&)
     Mat& operator = (const Scalar& s);
          ^
/usr/local/include/opencv2/core/mat.hpp:1102:10: note:   no known conversion for argument 1 from ‘IplImage* {aka _IplImage*}’ to ‘const Scalar& {aka const cv::Scalar_<double>&}’
ueye/CMakeFiles/ueye_nodelets.dir/build.make:158: recipe for target 'ueye/CMakeFiles/ueye_nodelets.dir/src/StereoNode.cpp.o' failed
make[2]: *** [ueye/CMakeFiles/ueye_nodelets.dir/src/StereoNode.cpp.o] Error 1
CMakeFiles/Makefile2:5154: recipe for target 'ueye/CMakeFiles/ueye_nodelets.dir/all' failed
make[1]: *** [ueye/CMakeFiles/ueye_nodelets.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
[ 91%] Built target opencv_apps
Makefile:138: recipe for target 'all' failed
make: *** [all] Error 2

I'm missing some packaged or step?
Thank you

Originally posted by DanROS on ROS Answers with karma: 18 on 2015-11-09
Post score: 0

A:

Issue: https://bitbucket.org/kmhallen/ueye/issues/11/
Problem: Build fails when compiled with OpenCV 3
Solution: Don't use OpenCV

Originally posted by kmhallen with karma: 1416 on 2015-11-09
This answer was ACCEPTED on the original site
Post score: 1

